# drawing_tablet

./: .gitignore  README.md
android_app/: build.gradle.kts  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/androidTest/java/it/smaso/drawingtablet/: ExampleInstrumentedTest.kt
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/java/it/smaso/drawingtablet/: MainActivity.kt  StrokeAction.kt  StrokeActionTouchListener.kt
android_app/app/src/main/java/it/smaso/drawingtablet/components/: AddressRow.kt
android_app/app/src/main/java/it/smaso/drawingtablet/connection/: SocketConnection.kt
android_app/app/src/main/java/it/smaso/drawingtablet/connection/model/: ScreenSize.kt
android_app/app/src/main/java/it/smaso/drawingtablet/ui/theme/: Color.kt  Theme.kt  Type.kt
android_app/app/src/main/res/values/: strings.xml  themes.xml
android_app/app/src/test/java/it/smaso/drawingtablet/: ExampleUnitTest.kt
android_app/gradle/: libs.versions.toml
android_app/gradle/wrapper/: gradle-wrapper.properties
android_app/protobuf/: build.gradle
android_app/protobuf/src/main/proto/: MainService.proto
desktop_client/: CMakeLists.txt  Makefile  logger.h  main.cpp
desktop_client/cursor_utils/: cursor_utils.cpp  cursor_utils.h
desktop_client/proto/: MainService.proto
desktop_client/server/: remote.cpp  serial.cpp  server.hpp
desktop_client/service/: main_service.cpp  main_service.hpp
